[package]
name = "empirical_splice_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suffine = { git = "https://github.com/mosmeh/suffine" }
kseq = "0.5.0"
memmap = "0.7.0"
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
clap = { version = "4.0.29", features = ["derive"] }
